# helix

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.dev  GITHUB_CHECKLIST.md  Helix_AI_Engine_Environment.postman_environment.json  Helix_AI_Engine_Postman_Collection.json  PERFORMANCE_OPTIMIZATION.md  POSTMAN_REPORTING_GUIDE.md  PROJECT_CONTEXT_SUMMARY.md  PROJECT_STATUS_SUMMARY.md  QUICK_RESUME_GUIDE.md  QUICK_START.md  README.md  README_GITHUB.md  SALESFORCE_TESTING_GUIDE.md  STATUS.md  TESTING_GUIDE.md  TEST_RESULTS_TEMPLATE.md  cleanup.bat  debug_agent3.py  docker-compose.dev.yml  docker-compose.yml  fix_performance_tier.py  git_commit.bat  helix.bat  helix_automation_architecture.md  helix_commands.bat  pyproject.toml  quick_test.py  requirements-langgraph.txt  requirements.txt  restart_api.py  run_langgraph_tests.py  simple_api_test.py  start_helix.bat
docs/: PERFORMANCE.md  TESTING.md
examples/: login_automation_examples.py  salesforce_automation.py
scripts/: dev_start.py  generate_test_report.py  init_db.sql
src/api/: dependencies.py  enhanced_main.py  main.py  models.py  test_endpoints.py
src/core/: enhanced_orchestrator.py  performance_optimizer.py  smart_orchestrator.py  ten_layer_orchestrator.py  universal_locator.py
src/langgraph/: README.md
src/layers/: accessibility_bridge.py  accessibility_bridge_simple.py  base.py  behavioral_pattern.py  canvas_handler.py  contextual_relationship.py  contextual_relationship_simple.py  enhanced_semantic_intent.py  state_context.py  (+12 more)
tests/: test_login_automation.py  test_universal_locator.py
(+22 files in other folders)
